# experiments

./: LICENSE
RuntimeConceptIdiom/: CMakeLists.txt  CommandSequence.cpp  CommandSequence.h  CommandSequenceTest.cpp  DrawableObject.cpp  DrawableObject.h  DrawableObjectScene.cpp  DrawableObjectScene.h  DrawableObjectSceneTest.cpp  Id.h  Position.h  readme.md
RuntimeConceptIdiom/cmake/: AddGoogleTest.cmake
RuntimeConceptIdiom/commands/: Add.cpp  Add.h  Command.h  Common.h  Composite.cpp  Composite.h  Move.cpp  Move.h  Remove.cpp  Remove.h  Tests.cpp
grpc-test/grpc-test-go/: client.go  go.mod
grpc-test/grpc-test-go/vlad/grpc_test/: service.pb.go  service_grpc.pb.go
grpc-test/grpc-test-rust/: Cargo.toml
grpc-test/grpc-test-rust/src/client/: main.rs
grpc-test/grpc-test-rust/src/server/: main.rs
grpc-test/proto/: service.proto
